src/rules/rename_variables/snapshots/darklua_core__rules__rename_variables__test__no_globals_rename_variables.snap
---
source: src/rules/rename_variables/mod.rs
expression: "Box::new(RenameVariables::new(empty())) as Box<dyn Rule>"
---
{
  "rule": "rename_variables",
  "globals": []
}
