src/rules/rename_variables/snapshots/darklua_core__rules__rename_variables__test__roblox_globals_rename_variables.snap
---
source: src/rules/rename_variables/mod.rs
expression: rule as Box<dyn Rule>
---
{
  "rule": "rename_variables",
  "globals": [
    "$roblox"
  ]
}
